adjusted sidenav / fixed layout issues / mobile View

--- a/src/scss/components/_sidenav.scss
+++ b/src/scss/components/_sidenav.scss
@@ -24,3 +24,31 @@
   .side_nav.collapsed .nav-label {
     display: none;
   }
+
+  .side_nav_mobile {
+    left: 1vh;
+    position: fixed;
+    top: 1vh;
+    width: 250px;
+    z-index: 16;
+    overflow: hidden;
+    background-color: whitesmoke;
+    margin-left: 0px;
+    /*
+    -webkit-transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    transition: all 0.25s ease-in-out;
+    */
+  }
+  
+  .side_nav_mobile.collapsed {
+    width: 75px;
+  }
+  
+  .side_nav_mobile.collapsed .bi {
+    font-size: 1.25rem;
+  }
+  
+  .side_nav_mobile.collapsed .nav-label {
+    display: none;
+  }
